--- a/css/styles.css
+++ b/css/styles.css
@@ -10146,17 +10146,17 @@ header.masthead .masthead-heading {
     margin-bottom: 4rem;
   }
 }
-#projects .portfolio-item {
+.portfolio-section .portfolio-item {
   max-width: 25rem;
   margin-left: auto;
   margin-right: auto;
 }
-#projects .portfolio-item .portfolio-link {
+.portfolio-section .portfolio-item .portfolio-link {
   position: relative;
   display: block;
   margin: 0 auto;
 }
-#projects .portfolio-item .portfolio-link .portfolio-hover {
+.portfolio-section .portfolio-item .portfolio-link .portfolio-hover {
   display: flex;
   position: absolute;
   width: 100%;
@@ -10167,25 +10167,25 @@ header.masthead .masthead-heading {
   opacity: 0;
   transition: opacity ease-in-out 0.25s;
 }
-#projects .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+.portfolio-section .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
   font-size: 1.25rem;
   color: white;
 }
-#projects .portfolio-item .portfolio-link:hover .portfolio-hover {
+.portfolio-section .portfolio-item .portfolio-link:hover .portfolio-hover {
   opacity: 1;
 }
-#projects .portfolio-item .portfolio-caption {
+.portfolio-section .portfolio-item .portfolio-caption {
   padding: 1.5rem;
   text-align: center;
   background-color: #fff;
 }
-#projects .portfolio-item .portfolio-caption .portfolio-caption-heading {
+.portfolio-section .portfolio-item .portfolio-caption .portfolio-caption-heading {
   font-size: 1.5rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   margin-bottom: 0;
 }
-#projects .portfolio-item .portfolio-caption .portfolio-caption-subheading {
+.portfolio-section .portfolio-item .portfolio-caption .portfolio-caption-subheading {
   font-style: italic;
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
