--- a/css/styles.css
+++ b/css/styles.css
@@ -440,7 +440,7 @@ small,
 mark,
 .mark {
   padding: 0.2em;
-  background-color: #fcf8e3;
+  background-color: #f8f9fa;
 }
 
 .list-unstyled {
@@ -9993,12 +9993,12 @@ p {
   }
 }
 ::-moz-selection {
-  background: #fed136;
+  background: #85c0ff;
   text-shadow: none;
 }
 
 ::selection {
-  background: #fed136;
+  background: #85c0ff;
   text-shadow: none;
 }
 
@@ -10042,11 +10042,11 @@ img::-moz-selection {
   font-size: 0.75rem;
   color: #fff;
   text-transform: uppercase;
-  background-color: #fed136;
+  /* background-color: #fed136; */
   border: 0;
 }
 #mainNav .navbar-brand {
-  color: #fed136;
+  /* color: #fed136; */
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   letter-spacing: 0.0625em;
@@ -10472,6 +10472,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .footer {
+  background-color: #212529;
   text-align: center;
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
