--- a/css/styles.css
+++ b/css/styles.css
@@ -9828,6 +9828,11 @@ a.text-dark:hover, a.text-dark:focus {
   text-align: justify !important;
 }
 
+.text-muted-centered {
+  color: #6c757d !important;
+  text-align: center !important;
+}
+
 .text-black-50 {
   color: rgba(0, 0, 0, 0.5) !important;
 }
